# universal-mass-framework

./: .env.example  .git_commit_msg.txt  .gitignore  .mcp.json  Dockerfile  LICENSE  README.md  cloudrun-deploy.yml  code-review-findings.md  pyproject.toml
.github/workflows/: blank.yml  cloudrun-deploy.yml  deploy.yml
Downloads/ai_development_mass_framework-20250622T063827Z-1-001/ai_development_mass_framework/: .env.template  .gitignore  Attached HTML and CSS Context.txt  BETA_READY_UX_UPDATE.md  COMPETITIVE_ANALYSIS_COMPREHENSIVE.md  COMPETITIVE_COMPARISON_CHART.md  COMPREHENSIVE_FEATURE_ANALYSIS.md  COMPREHENSIVE_UPGRADE_COMPLETE.md  CONSOLE_LAUNCH_GUIDE.md  CRITICAL_ACTION_PLAN.md  DATABASE_SETUP_GUIDE.md  DEPLOYMENT_SUCCESS_REPORT.md  DEPLOYMENT_SUCCESS_SUMMARY.md  DEVELOPMENT_STATUS_COMPLETE.md  Dockerfile  Dockerfile.production  EDUCATION_ROADMAP.md  ENHANCEMENT_COMPLETE.md  ENTERPRISE_ADVANCEMENT_ANALYSIS.md  ENTERPRISE_ADVANCEMENT_COMPLETE.md  ENTERPRISE_IMPLEMENTATION_AUDIT.md  ENTERPRISE_JOURNEY_COMPLETE.md  ENTERPRISE_STATUS_REPORT_FINAL.md  ENTERPRISE_TRANSFORMATION_ROADMAP.md  FASTAPI_TEST_FIXES_COMPLETE.md  FINAL_IMPLEMENTATION_STATUS_REPORT.md  FINAL_REVOLUTIONARY_IMPLEMENTATION.md  FINAL_STATUS_COMPLETE.md  FINAL_VALIDATION_REPORT.md  FIREBASE_CAPACITY_ANALYSIS.md  FIREBASE_LAUNCH_PRODUCTION.md  (+225 more)
frontend/: package-lock.json  package.json
frontend/src/: App.js  App.test.js
mass/: __init__.py  config.py  graph.py  ingest.py  ingest_store.py  main.py  mcp_server.py  models.py
tests/: test_basic.py  test_main.py
universal_mass_framework/: app.py
(+382 files in other folders)
